@@ -6,7 +6,7 @@ CFLAGS_FINAL=${CFLAGS} -I. -DVERSION="\"${VERSION}\"" -DTIMESTAMP="\"${TIMESTAMP
 
 all : mosquitto
 
-mosquitto : mosquitto.o bridge.o conf.o context.o database.o logging.o loop.o memory_mosq.o persist.o net.o net_mosq.o read_handle.o read_handle_client.o read_handle_server.o read_handle_shared.o security.o security_external.o send_client_mosq.o send_mosq.o send_server.o subs.o util.o util_mosq.o will_mosq.o
+mosquitto : mosquitto.o bridge.o conf.o context.o database.o logging.o loop.o memory_mosq.o persist.o net.o net_mosq.o read_handle.o read_handle_client.o read_handle_server.o read_handle_shared.o security.o security_external.o send_client_mosq.o send_mosq.o send_server.o service.o subs.o util.o util_mosq.o will_mosq.o
 	${CC} $^ -o $@ ${LDFLAGS} ${LIBS}
 
 mosquitto.o : mosquitto.c mqtt3.h
@@ -67,6 +67,9 @@ send_mosq.o : ../lib/send_mosq.c ../lib/send_mosq.h
 	${CC} $(CFLAGS_FINAL) -c $< -o $@
 
 send_server.o : send_server.c mqtt3.h
+	${CC} $(CFLAGS_FINAL) -c $< -o $@
+
+service.o : service.c mqtt3.h
 	${CC} $(CFLAGS_FINAL) -c $< -o $@
 
 subs.o : subs.c mqtt3.h
